# cdxgen_for_test

./: README.md  capstone.json  package-lock.json  tsconfig.json
test/: parsePyLockData.run.js  parsePyProjectTomlFile.run.js
test/code/: parsePyLockData.run.js  parsePyProjectTomlFile.run.js
test/local-data/: README.md
test/local-data/poetry/: dj-rest-auth.deps.json  django.deps.json  openai.deps.json  poetry.lock.parsed.json
test/local-data/pyproject/: pyproject.parsed.json  pyproject.summary.json  pyproject.toml
